--- a/plagiat_ed_corpus_modernité_artistique.html
+++ b/plagiat_ed_corpus_modernité_artistique.html
@@ -1211,10 +1211,51 @@ ces considérations que l’on peut poser la question de ce qu’il y a à tirer
 situationniste. Si le suivisme et l’idéalisation de figures comme celles de Debord doivent être critiquées, c’est en
 comprenant sur quelles aspirations réelles se fonde toute adhésion à une idéologie, ét éventuellement aussi quelle
 est la part de responsabilité de ceux qui ont prétendu à cette position exemplaire.</p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
-						<p><span></p>
+						<p><span>«&#8239;Debord n’avait qu’un seul but, comme toute sa vie en témoigne&#8239;: être indiscutable. 
+							De ce point de vue, sa réussite est incontestable. 
+		L’homme qui disait «&#8239;tout ce qui est discutable doit être discuté&#8239;» était le mieux placé pour
+apprécier ce genre de choses. Il a ainsi contribué, dans toute la mesure de ses moyens qui n’étaient pas négligeables,
+à l’obscurité de la fin d’un siècle.&#8239;»
+<br>
+Jean-Pierre Voyer, <i>Debord est un homme que je corrige toujours</i></p>
+						<p><span>Tout le sens de l’époque présente, 
+dans l’Occident post-68, est déterminée en négatif par la critique situationniste. 
+Si nombre d’imbéciles peuvent aller jusqu’à soutenir qu’en quelque sorte l’I.S. aurait par là une responsabilité 
+dans la modernisation de la société de classes, il faut bien plutôt comprendre que c’est justement toute
+l’époque qui a été contrainte par la nécessité de promouvoir le situationnisme comme prinicpal réformisme de
+notre époque. Là où l’I.S. a critiqué le spectacle de la satisfaction dans la consommation des marchandises, la société 
+organise désormais le spectacle de l’insatisfaction sur tous les détails (jusqu’à l’absurdité de la fin du monde qui se
+présente à travers l’écologie comme un défaut de détail de plus) pour justement masquer la totalité et la cohérence
+de la société autour de ce qui la fonde&#8239;: la dépossession et la misère, qui trouvent leur racine dans la séparation et
+la passivité, l’aliénation de toute activité humaine dans la politique spécialisée et la marchandise. L’omniprésence
+dans notre vie des réseaux sociaux eux-mêmes peut être comprise comme une réponse au défaut souligné par l’I.S.
+de l’incommunicabilité de la vie quotidienne, un réformisme de la vie quotidienne qui se substitue à sa critique, et
+dont un autre avatar est l’obsession des torts particuliers qui caractérise l’idéologie de la déconstruction des «&#8239;oppressions&#8239;». 
+Cette obsession doit être comprise comme la version pervertie d’une exigence centrale de la théorie
+révolutionnaire&#8239;: partir des insuffisances et des défauts de la vie réelle telle que chacun peut les expérimenter, afin
+de les doter enfin d’un langage capable de les combattre. Tous les défauts et les imbécillités qui nous entourent
+témoignent en fait d’à quel point étaient justes les perspectives que s’est donnée l’I.S., d’à quel point elle a exprimé
+les désirs d’une époque, et c’est justement cela qui leur a valu d’être récupérés à tous les niveaux.</p>
+						<p><span>«&#8239;Mais ce qui est excellent non seulement ne peut échapper au destin d’être ainsi dévitalisé et despiritualisé, d’être
+dépouillé et de voir sa peau portée par un savoir sans vie et plein de vanité&#8239;; il doit encore reconnaître dans ce
+destin même la puissance que ce qui est excellent exerce sur les âmes, sinon sur les esprits&#8239;; il faut y reconnaître le
+perfectionnement vers l’universalité, et la déterminabilité de la forme, en quoi consiste son excellence, et qui rend
+seulement possible l’utilisation de cette universalité de manière superficielle.&#8239;»
+<br>
+Hegel, <i>Phénoménologie de l’Esprit</i></p>
+						<p><span>Il faut aller plus loin que cet exposé, qui se contente presque de vulgariser la pensée situationniste d’une
+manière doublement limitée&#8239;: limitée par son approche purement théorique d’un problème qui se situe au-delà de
+la simple théorie (ainsi l’autobiographie de Ken Knabb, et notamment la manière dont il s’est intéressé à la théorie
+situationniste –&#8239;http://www.bopsecrets.org/PS/autobio2.htm&#8239;– illustre de manière exemplaire en quoi sa réelle
+compréhension réside dans son appropriation pratique) et aussi limitée dans le temps, se contentant quasiment
+exclusivement d’explorer la période d’activité de l’I.S. entre 1957 et 1972 –&#8239;la période «&#8239;classique&#8239;» de la théorie
+situationniste pourrait-on dire&#8239;– et se gardant de tenter de tirer les conclusions de son échec et du demi-siècle
+d’histoire qui maintenant nous en séparent. La défaite de l’I.S., dans la mesure où la société de classes à survécu,
+a rendu caduque son œuvre mais illustré l’excellence de sa méthode, et ce qu’il faut désormais, c’est clarifier ses
+insuffisances. Il reste à faire le tri parmi les longs et laborieux débats qui ont structuré la galaxie post-situationniste,
+beaucoup de réponses attendent encore d’y être redécouvertes, voici un bon point de départ pour ce bilan historique&#8239;:
+<br>
+http://www.bopsecrets.org/French/index.htm (cf. notamment Voyer, Denevert, Knabb)</p>
 						<p><span></p>
 						<p><span></p>
 						<p><span></p>
