--- a/plagiat_ed_corpus_modernité_artistique.html
+++ b/plagiat_ed_corpus_modernité_artistique.html
@@ -1263,10 +1263,16 @@ http://www.bopsecrets.org/French/index.htm (cf. notamment Voyer, Denevert, Knabb
 			    
 						<p><span><i><br>Thèses sur Feuerbach</i><span></p>
                             <p><span>Karl Marx <span></p> 
-							<a href="" title="Pdf">
-							<p><span><u>(.pdf)</u></a><span></p>
+							<a href="https://drive.google.com/uc?id=1WX-UshxhGO8R5nCk6HWIYVIGL398QHnP" title="Pdf">
+							<p><span><u>Karl Marx, <i>Thèses sur Feuerbach</i>(.pdf)</u></a><span></p>
 			            <p><span>https://www.marxists.org/francais/marx/works/1845/00/kmfe18450001.htm</p>
-					    <p><span></p>
+					    <p><span>«&#8239;La question de savoir s’il y a lieu de reconnaître à la pensée humaine une vérité objective n’est pas une question
+théorique, mais une question pratique. C’est dans la pratique qu’il faut que l’homme prouve la vérité, c’est-à-dire
+la réalité, et la puissance de sa pensée, dans ce monde et pour notre temps. La discussion sur la réalité ou l’irréalité
+d’une pensée qui s’isole de la pratique, est purement scolastique.&#8239;»<br>
+«&#8239;Toute vie sociale est essentiellement pratique. Tous les mystères qui détournent la théorie vers le mysticisme
+trouvent leur solution rationnelle dans la pratique humaine et dans la compréhension de cette pratique.&#8239;»<br>
+«&#8239;Les philosophes n’ont fait qu’interpréter le monde de différentes manières, ce qui importe c’est de le transformer.&#8239;»</p>
 			
 			    
 						<p><span><i><br></i><span></p>
