--- a/plagiat_ed_corpus_modernité_artistique.html
+++ b/plagiat_ed_corpus_modernité_artistique.html
@@ -1576,10 +1576,9 @@ gens qui n’ont rien compris à la totalité de la problématique de notre soci
 					<p><span><b>Raoul Vaneigem,<i>Banalités de base</i></b><span></p> 
 							<a href="https://drive.google.com/uc?id=1qp-F5HnDBi3hkRwaZoOi6rb-cANl7YT5" title="Banalités de basePdf">
 							<p><span><u>I.S. n°7(.pdf)</u></a><span></p>
-					<p><span><b>Raoul Vaneigem,<i>Banalités de base</i></b><span></p> 
 							<a href="https://drive.google.com/uc?id=1B79TWw3_uqRMQUOTec1RIsWS-1LRj2kb" title="Banalités de basePdf">
 							<p><span><u>I.S. n°8(.pdf)</u></a><span></p>
-			            <p><span>part. 1 : http://debordiana.chez.com/francais/is7.htm#banalites
+			            <p><span>part. 1 : http://debordiana.chez.com/francais/is7.htm#banalites <br>
 part. 2 : http://debordiana.chez.com/francais/is8.htm#banalites</p>
 					    <p><span>« Le <i>welfare state</i> nous impose aujourd’hui, sous la forme de techniques de confort (mixer, conserves, Sarcelles et
 Mozart pour tous), les éléments d’une survie au maintien de laquelle le plus grand nombre des hommes n’a cessé
