--- a/plagiat_ed_corpus_modernité_artistique.html
+++ b/plagiat_ed_corpus_modernité_artistique.html
@@ -1637,7 +1637,7 @@ vie réelle, qui est celle de la praxis quotidienne. Nous en sommes toujours là
 d’une mystique contre laquelle chacun de nos gestes proteste en y obéissant.&#8239;»<br>
 « Modèle de dieux et de héros, le maître, le possédant est le vrai visage de Prométhée, du Christ, de tous les sacrifiés
 spectaculaires qui ont permis que ne cessent de se sacrifier aux maîtres, à l’extrême minorité.&#8239;»
-« Le sacrifice du possédant et du non-possédant fonde le concept de sort commun&#8239;; en d’autres termes, la notion						    </p>
+« Le sacrifice du possédant et du non-possédant fonde le concept de sort commun&#8239;; en d’autres termes, la notion
 de condition humaine se définit sur la base d’une image idéale et douloureuse où tente de se résoudre l’opposition
 irréductible entre le sacrifice mythique des uns et la vie sacrifiée des autres. Au mythe appartient la fonction d’unifier
 et d’éterniser, en une succession d’instants statiques, la dialectique du «&#8239;vouloir-vivre&#8239;» et de son contraire.&#8239;»
