--- a/plagiat_ed_corpus.html
+++ b/plagiat_ed_corpus.html
@@ -82,14 +82,13 @@
 			
 			    <tr>
 	                <td width="200" id="illu1937"><br>
-			                <a id="legende" rel="article" href="  .html">
-			                <img src="  .jpg" alt="  " width="200" height="auto" /></a>
+			                <a id="legende" rel="article" href="plagiat_ed_corpus_modernité_artistique.html">
+			                <img src="https://drive.google.com/uc?id=16K8yBaFBkVpekv-uxEle4bXjXebDRSxn" alt="Exposition-martini-1787" width="200" height="auto" /></a>
 			            </td>
 	                    <td width="325" id="Art et modernité">
-						<p><span><i><br>   </i><span></p>
-                            <p><span><br>   <span></p> 
-							<a href=" .pdf" title="Pdf">
-							<p><span><u><br>  </u></a><span></p>
+						<p><span><i><br>Modernité artistique, culture et histoire dans la théorie situationniste</i><span></p>
+							<a href=" .pdf" title="modernité artistiquePdf">
+							<p><span><u><br>Modernité artistique, culture et histoire dans la théorie situationniste(.pdf)</u></a><span></p>
 			            </td>
 		            </tr>
 				    <tr>
