--- a/plagiat_ed_corpus.html
+++ b/plagiat_ed_corpus.html
@@ -88,7 +88,7 @@
 	                    <td width="325" id="Art et modernité">
 						<p><span><i><br>Modernité artistique, culture et histoire dans la théorie situationniste</i><span></p>
 							<a href=" .pdf" title="modernité artistiquePdf">
-							<p><span><u><br>Modernité artistique, culture et histoire dans la théorie situationniste(.pdf)</u></a><span></p>
+							<p><span><u>Modernité artistique, culture et histoire dans la théorie situationniste(.pdf)</u></a><span></p>
 			            </td>
 		            </tr>
 				    <tr>
