--- a/plagiat_ed_corpus_modernité_artistique.html
+++ b/plagiat_ed_corpus_modernité_artistique.html
@@ -2380,7 +2380,7 @@ sur un éloge des minorités agissantes, ou par exemple comme disait Debord sur 
 mais quand même il faut mériter tous les jours de participer à l’entreprise. Donc ce n’est pas un hasard si Debord
 a affublé l’I.S. de l’épithète shakespearien de <i>band of brothers</i>. Et qui peut nier que Debord ait donné, au moins lui,
 						    le bon exemple dans ce domaine&#8239;?</p><span>					
-					
+	<p><span>Les Editions Plagiat</p>				
   </div>
 
   <div class="col-3 col-s-12">
