--- a/plagiat_ed_corpus.html
+++ b/plagiat_ed_corpus.html
@@ -86,7 +86,7 @@
 			                <img src="https://drive.google.com/uc?id=16K8yBaFBkVpekv-uxEle4bXjXebDRSxn" alt="Exposition-martini-1787" width="200" height="auto" /></a>
 			            </td>
 	                    <td width="325" id="Art et modernité">
-						<p><span><i><br>Modernité artistique, culture et histoire dans la théorie situationniste</i><span></p>
+						<p><span><i><br>Modernité artistique, culture et histoire dans la théorie situationniste</i><br>Les Editions Plagiat, 2022<span></p>
 							<a href=" .pdf" title="modernité artistiquePdf">
 							<p><span><u>Modernité artistique, culture et histoire dans la théorie situationniste(.pdf)</u></a><span></p>
 			            </td>
