--- a/plagiat_ed_corpus_modernité_artistique.html
+++ b/plagiat_ed_corpus_modernité_artistique.html
@@ -1953,10 +1953,10 @@ Ceci passe par le dépérissement des formes aliénées de la communication. Le 
 bon&#8239;? Il faudrait plutôt comprendre&#8239;: la totalité de ce qui s’est fait, ce qui reste à faire, et non ajouter d’autres ruines
 au vieux monde du spectacle et des souvenirs.&#8239;»						    </p>
 						    
-						    <p><span><b>Guy Debord, <i>Critique de la séparation</i> - Transcription</b><span></p>
+						    <p><span><b>Guy Debord, <i>Critique de la séparation</i> - transcription</b><span></p>
 			            <p><span>https://www.youtube.com/watch?v=bDkLPyHp0Q0</p>
 					       <p><span>« Quand on songe combien il est naturel et avantageux pour l’homme d’identifier sa langue et la réalité, on devine
-quel degré de sophistication il lui a fallu atteindre pour les dissocier et faire de chacune un objet d’étude.<br>
+quel degré de sophistication il lui a fallu atteindre pour les dissocier et faire de chacune un objet d’étude.&#8239;»<br>
 				Ceci est une citation du livre d’André Martinet, <i>Eléments de linguistique générale</i>.<br>
 Le documentaire que vous allez voir s’appelle <i>Critique de la séparation</i>, il a été écrit et réalisé par Guy Debord. Les
 images sont d’André Mrugalski. Chantal Delattre a fait le montage.<br>
@@ -2379,7 +2379,7 @@ sur un éloge des minorités agissantes, ou par exemple comme disait Debord sur 
 égaux, c’est un peu la conception grecque de la démocratie. Personne n’est exclu par sa naissance de la démocratie,
 mais quand même il faut mériter tous les jours de participer à l’entreprise. Donc ce n’est pas un hasard si Debord
 a affublé l’I.S. de l’épithète shakespearien de <i>band of brothers</i>. Et qui peut nier que Debord ait donné, au moins lui,
-						    le bon exemple dans ce domaine&#8239;?&#8239;»</p><span>					
+						    le bon exemple dans ce domaine&#8239;?</p><span>					
 	<p><span>Les Editions Plagiat, 2022</p>				
   </div>
 
