--- a/plagiat_ed_corpus.html
+++ b/plagiat_ed_corpus.html
@@ -87,7 +87,7 @@
 			            </td>
 	                    <td width="325" id="Art et modernité">
 						<p><span><i><br>Modernité artistique, culture et histoire dans la théorie situationniste</i><br>Les Editions Plagiat, 2022<span></p>
-							<a href=" .pdf" title="modernité artistiquePdf">
+							<a href="https://drive.google.com/uc?id=1BOzaMXP8AT7PHZJOSFSzkkyPZkH6CUr3" title="modernité artistique.Pdf">
 							<p><span><u>Modernité artistique, culture et histoire dans la théorie situationniste(.pdf)</u></a><span></p>
 			            </td>
 		            </tr>
