--- a/plagiat_ed_corpus.html
+++ b/plagiat_ed_corpus.html
@@ -73,7 +73,7 @@
 	
 	<br>
 	<br>
-			<caption><span><h3>Recueil thématique&#8239;.</h3><span></caption>    
+			<caption><span><h3>Recueil thématique&#8239;.</h3>(cliquer sur l'image pour la lecture en ligne)<span></caption>    
 	         
             <br>
 			
