--- a/plagiat_ed_corpus.html
+++ b/plagiat_ed_corpus.html
@@ -73,7 +73,7 @@
 	
 	<br>
 	<br>
-			<caption><span><h3>Recueil thématique&#8239;.</h3>(cliquer sur l'image pour la lecture en ligne)<span></caption>    
+			<caption><span><h3>Recueil thématique&#8239;</h3>(cliquer sur l'image pour la lecture en ligne)<span></caption>    
 	         
             <br>
 			
@@ -87,7 +87,7 @@
 			            </td>
 	                    <td width="325" id="Art et modernité">
 						<p><span><i><br>Modernité artistique, culture et histoire dans la théorie situationniste</i><br>Les Editions Plagiat, 2022<span></p>
-							<a href="https://drive.google.com/uc?id=1BOzaMXP8AT7PHZJOSFSzkkyPZkH6CUr3" title="modernité artistique.Pdf">
+							<a href="https://drive.google.com/uc?id=1GnsxBfHCUde4dKGb2jeV2px4awQ0O93g" title="modernité artistique.Pdf">
 							<p><span><u>Modernité artistique, culture et histoire dans la théorie situationniste(.pdf)</u></a><span></p>
 			            </td>
 		            </tr>
