--- a/plagiat_ed_corpus.html
+++ b/plagiat_ed_corpus.html
@@ -126,7 +126,7 @@
   <div class="col-3 col-s-12">
     <div class="aside">
       <a id="affiche" rel="catalogue/essais">
-				<img src="image_site/affichetolbiac.jpg" alt="affiche1tolbiac" width="300" height="auto" />
+				<img src="image_site/affichetolbiac.JPG" alt="affiche1tolbiac" width="300" height="auto" />
 			</a>
     </div>
   </div>
