--- a/plagiat_ed_corpus_modernité_artistique.html
+++ b/plagiat_ed_corpus_modernité_artistique.html
@@ -2398,7 +2398,7 @@ a affublé l’I.S. de l’épithète shakespearien de <i>band of brothers</i>. 
   <div class="col-3 col-s-12">
     <div class="aside">
       <a id="affiche" rel="catalogue/histoire">
-				<img src="image_site/affiche120.jpg" alt="affiche120corps" width="300" height="auto" />
+				<img src="image_site/affichetolbiac.JPG" alt="affiche120corps" width="300" height="auto" />
 			</a>
     </div>
   </div>
