--- a/plagiat_ed_index.html
+++ b/plagiat_ed_index.html
@@ -100,7 +100,7 @@
 			<tr>
 	                
 	                    <td width="150" id="molotov"><br>
-			                <a id="legende" rel="article" href="https://www.mediamanif.com/">
+			                <a id="legende" rel="article" href="https://www.mediamanif.org/">
 			                <img src="https://drive.google.com/uc?id=1zchqrVcM-1DOWRa1GHEYeTQLVJa0Csfv" alt="molotov" width="100" height="auto" /></a>
 			            </td>
 				    
