--- a/plagiat_ed_index.html
+++ b/plagiat_ed_index.html
@@ -84,7 +84,7 @@
 			<tr width="450" id="titre">
 					    <br><br><span><p><br>Index des auteurs :<br><br>
 					    ADORNO, Theodor W., <i>L’industrie culturelle</i> (conférence de 1962), (corpus- Modernité artistique).<br><br>
-					    ANONYME, révolté de la colonne de fer, <i>Protestation devant les libertaires du présent et du futur sur les capitulations de 1937</i> (Socle théorique).<br><br>
+					    ANONYME, révolté de la colonne de fer, <i>Protestation devant les libertaires du présent et du futur sur les capitulations de 1937</i> (socle théorique).<br><br>
 					    BRETON, André, <i>Manifeste du surréalisme</i> (1918) (corpus- Modernité artistique).<br><br>
 					    CANJUERS, Pierre (Daniel Blanchard), <i>Préliminaires pour une définition de l’unité du programme révolutionnaire </i> (corpus- Modernité artistique).<br><br>
 					    CONTRADICTION (groupe Américain dont faisait parti Ken Knabb), <i>De la misère en milieu hippie</i>, (corpus- Modernité artistique).<br><br>
@@ -98,7 +98,7 @@ et les nouvelles formes d’action dans la politique ou l’art, Sur le passage 
 				(corpus- Modernité artistique).<br><br>
 					    I.S. (Italie), n°1, <i>Quand seul le meilleur suffira</i> (corpus- Modernité artistique).<br><br>
 					    JAPPE, Anselm, <i>Debord et la philosophie allemande</i> -&#8239;transcription, (corpus- Modernité artistique).<br><br>
-					    KHAYATI, Mustapha,<i>  De la misère en milieu étudiant</i>(socle théorique).<br><br>
+					    KHAYATI, Mustapha,<i>  De la misère en milieu étudiant</i> (socle théorique).<br><br>
 					    KOTANYI, Attila, <i>Sur la Commune</i> (socle théorique).<br><br>
 					    MARINETTI, Filippo Tommaso, <i> Manifeste du futurisme</i> (corpus- Modernité artistique).<br><br>
 					    MARX, Karl, <i>Contribution à la critique de La philosophie du droit de Hegel</i> (socle théorique), <i>Thèses sur Feuerbach</i> (corpus- Modernité artistique).<br><br>
