--- a/plagiat_ed_index.html
+++ b/plagiat_ed_index.html
@@ -87,7 +87,7 @@
 					    ANONYME, révolté de la colonne de fer, <i>Protestation devant les libertaires du présent et du futur sur les capitulations de 1937</i> (socle théorique).<br><br>
 					    BRETON, André, <i>Manifeste du surréalisme</i> (1918) (corpus- Modernité artistique).<br><br>
 					    CANJUERS, Pierre (Daniel Blanchard), <i>Préliminaires pour une définition de l’unité du programme révolutionnaire </i> (corpus- Modernité artistique).<br><br>
-					    CONTRADICTION (groupe Américain dont faisait parti Ken Knabb), <i>De la misère en milieu hippie</i>, (corpus- Modernité artistique).<br><br>
+					    CONTRADICTION (groupe américain dont faisait partie Ken Knabb), <i>De la misère en milieu hippie</i>, (corpus- Modernité artistique).<br><br>
 					    DEBORD, Guy, <i>Sur la Commune, Le Questionnairede l’I.S., Conditions du mouvement révolutionnaire congolais, La société du spectacle, La planète malade</i> et traducteur de <i>Protestation 
 				devant les libertaires du présent et du futur sur les capitulations de 1937</i> et de <i>Véridique Rapport sur les dernières chances de sauver le capitalisme en Italie</i> (socle théorique), 
 				<i>Rapport sur la construction des situations, Préliminaires pour une définition de l’unité du programme révolutionnaire, Pour un jugement révolutionnaire de l’art, Les Situationnistes
