--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -101,7 +101,30 @@
 		            </tr>
 					<tr>
 	                    <td width="300" id="textes">
-				<p><span><span></p>
+				<p><span>ADORNO, Theodor W., <i>L’industrie culturelle</i> (conférence de 1962), (corpus- Modernité artistique).<br><br>
+					    ANONYME, révolté de la colonne de fer, <i>Protestation devant les libertaires du présent et du futur sur les capitulations de 1937</i> (socle théorique).<br><br>
+					    BRETON, André, <i>Manifeste du surréalisme</i> (1918) (corpus- Modernité artistique).<br><br>
+					    CANJUERS, Pierre (Daniel Blanchard), <i>Préliminaires pour une définition de l’unité du programme révolutionnaire </i> (corpus- Modernité artistique).<br><br>
+					    CONTRADICTION (groupe américain dont faisait partie Ken Knabb), <i>De la misère en milieu hippie</i>, (corpus- Modernité artistique).<br><br>
+					    DEBORD, Guy, <i>Sur la Commune, Le Questionnairede l’I.S., Conditions du mouvement révolutionnaire congolais, La société du spectacle, La planète malade</i> et traducteur de <i>Protestation 
+				devant les libertaires du présent et du futur sur les capitulations de 1937</i> et de <i>Véridique Rapport sur les dernières chances de sauver le capitalisme en Italie</i> (socle théorique), 
+				<i>Rapport sur la construction des situations, Préliminaires pour une définition de l’unité du programme révolutionnaire, Pour un jugement révolutionnaire de l’art, Les Situationnistes
+et les nouvelles formes d’action dans la politique ou l’art, Sur le passage de quelques personnes à travers une assez courte unité de temps, Critique de la séparation</i> - transcription, <i> </i>, (corpus- Modernité artistique).<br><br>
+					    DIN, Mamoste, <i>Ne pas mourir comme des chiens</i> (bande dessinée), illustrations de <i>Protestation devant les libertaires du présent et du futur sur les capitulations de 1937</i> (Socle théorique), et graphisme du site.<br><br>
+					    I.S., n°3, <i>Le sens du dépérissement de l’art</i>, n° 7, <i>Les mauvais jours finiront</i>, n° 7, <i>Du rôle de l’I.S.</i>, n° 7, <i>Communication prioritaire</i>, n° 7, <i>Sunset Boulevard</i>, 
+				n°8, <i>Domination de la nature, idéologies et classes</i>, n°8, <i>L’avant-garde de la présence</i>, n°8, <i> All the king’s men</i>, n°9, <i>Maintenant l’I.S.</i>, n°10, <i>Les mots captifs</i>,
+				(corpus- Modernité artistique).<br><br>
+					    I.S. (Italie), n°1, <i>Quand seul le meilleur suffira</i> (corpus- Modernité artistique).<br><br>
+					    JAPPE, Anselm, <i>Debord et la philosophie allemande</i> -&#8239;transcription, (corpus- Modernité artistique).<br><br>
+					    KHAYATI, Mustapha,<i>  De la misère en milieu étudiant</i> (socle théorique).<br><br>
+					    KOTANYI, Attila, <i>Sur la Commune</i> (socle théorique).<br><br>
+					    MARINETTI, Filippo Tommaso, <i> Manifeste du futurisme</i> (corpus- Modernité artistique).<br><br>
+					    MARX, Karl, <i>Contribution à la critique de La philosophie du droit de Hegel</i> (socle théorique), <i>Thèses sur Feuerbach</i> (corpus- Modernité artistique).<br><br>
+					    PANNEKOEK, Anton, <i>Lettre à Socialisme ou Barbarie</i> (socle théorique).<br><br>
+					    SANGUINETTI, Gianfranco (Censor), <i>Véridique Rapport sur les dernières chances de sauver le capitalisme en Italie</i> (socle théorique).<br><br>
+					    TZARA, Tristan, <i>Manifeste dada</i> (1918) (corpus- Modernité artistique).<br><br>
+					    VANEGEIM, Raoul, <i>Sur la Commune</i> (socle théorique), <i>Banalités de base</i> (corpus- Modernité artistique).<br><br>
+					    VELOCE, (présents sur Plagiat mais non publiés), <i>La civilisation du jeu, Ci-gît la critique, Réponse à Frédéric Lordon, Après l'orage</i> (socle théorique), <i>Thèses sur la poésie</i> (corpus- Modernité artistique).<span></p>
 					
 			             
 			           </td>
