--- a/plagiat_ed_index.html
+++ b/plagiat_ed_index.html
@@ -82,7 +82,7 @@
 	                    
               
 			<tr width="450" id="titre">
-					    <br><br><span><p><br>Index des auteurs :<br><br>
+					    <br><br><span><p><br>Index des auteurs édités, publiés ou cités par notre maison d'édition :<br><br>
 					    ADORNO, Theodor W., <i>L’industrie culturelle</i> (conférence de 1962), (corpus- Modernité artistique).<br><br>
 					    ANONYME, révolté de la colonne de fer, <i>Protestation devant les libertaires du présent et du futur sur les capitulations de 1937</i> (socle théorique).<br><br>
 					    BRETON, André, <i>Manifeste du surréalisme</i> (1918) (corpus- Modernité artistique).<br><br>
