--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -85,16 +85,16 @@
 				<p><span><h3><br>Textes</h3><span></p>
 					<p><span>ADORNO, Theodor W.
 					<a href="https://drive.google.com/uc?id=1rscIEmUxDGo96a8UWlm--bn9tfIsFWJl" title="Pdf">
-					<p><span><u><i>L’industrie culturelle</i> (conférence de 1962)(.pdf)</u></a><span></p>
+					<p><span><u><i>L’industrie culturelle</i> (conférence de 1962)(.pdf)</u></i></a><span></p>
 				<p><span>ANONYME, révolté de la colonne de fer
 					<br><i><a href="https://drive.google.com/uc?id=1j-9yHGbOKhoSxWFRQaBuO14JX7TpVnEB" title="Pdf">
-					<p><span><u>Protestation devant les libertaires du présent et du&#8239;futur&#8239;sur&#8239;les&#8239;capitulations&#8239;de&#8239;1937(.pdf)</i></u></a></span></p>
+					<u>Protestation devant les libertaires du présent et du&#8239;futur&#8239;sur&#8239;les&#8239;capitulations&#8239;de&#8239;1937(.pdf)</i></u></a></span></p>
 				<p><span>CANJUERS, Pierre (Daniel Blanchard)
 					<br><a href="http://debordiana.chez.com/francais/preliminaires.htm" title="Préliminaires pour une définition de l’unité du programme révolutionnaire">
 					<u><i>Préliminaires pour une définition de l’unité du programme révolutionnaire </i></u></a></span></p>
 				<p><span>CONTRADICTION (groupe américain dont faisait partie Ken Knabb), 
 				    	<br><a href="http://bopsecrets.org/French/hippies.htm" title="De la misère en milieu hippie">
-					<u><i>De la misère en milieu hippie</i></a></span></p>
+					<u><i>De la misère en milieu hippie</i></u></a></span></p>
 				<p><span>DEBORD, Guy, 
 					<br><i><a href="https://drive.google.com/uc?id=1w3VZzdOmzCA6krjxgDyNnwUY11gmC5Ar" title="congoPdf">
 					<u>Conditions du mouvement révolutionnaire congolais (.pdf)</u></a>
@@ -128,17 +128,17 @@
 					<u>N°10(.pdf)</u></a></i></span></p>
 				<p><span>I.S. (Italie)
 					<i><br><a href="http://debordiana.chez.com/francais/internazionale.htm#quand" title="Internazionale">
-					<u>N°1, <i>Quand seul le meilleur suffira</u></a></i></span></p>
+					<u>N°1, Quand seul le meilleur suffira</u></a></i></span></p>
 				<p><span>KHAYATI, Mustapha
 					<br><i><a href="https://drive.google.com/uc?id=1ULWox9zKKSiw0Uo9fjH1tKsNFB7RaX5u" title="Pdf">
 				  	<u>De la misère en milieu etudiant (.pdf)</u></a></i></span></p>
 				<p><span>KOTANYI, Attila
-					<br><i>Sur la Commune</u></a></i></span></p>
+					<br><u><i>Sur la Commune</u></a></i></span></p>
 				<p><span>MARX, Karl
 					<br><a href="https://drive.google.com/uc?id=1i6x_DSKdEqMiWmqvAsEZeejQyVsxmmnB" title="Pdf">
 					<i><u>Contribution à la critique de La philosophie du droit de Hegel(.pdf)</u></a><span></p>
 					<br><a href="https://drive.google.com/uc?id=1WX-UshxhGO8R5nCk6HWIYVIGL398QHnP" title="Pdf">
-					<u><i>Thèses sur Feuerbach</i>(.pdf)</u></a><span></p></u></a></i></span></p>
+					<u>Thèses sur Feuerbach</i>(.pdf)</u></a><span></p></u></a></i></span>
 				<p><span>PANNEKOEK, Anton
 					<br><a href="https://drive.google.com/uc?id=1fiYMiYO4qmG7oaMvZ3LONZkzypq9X9ve" title="Pdf">
 					<i><u>Lettre à Socialisme ou Barbarie(.pdf)</i></u></a><span></p>
