--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -134,9 +134,9 @@
 					<br><u><i>Sur la Commune</u></a></i></span></p>
 				<p><span>MARX, Karl
 					<br><a href="https://drive.google.com/uc?id=1i6x_DSKdEqMiWmqvAsEZeejQyVsxmmnB" title="Pdf">
-					<i><u>Contribution à la critique de La philosophie du droit de Hegel(.pdf)</u></a><span></p>
+					<i><u>Contribution à la critique de La philosophie du droit de Hegel(.pdf)</u></a>
 					<br><a href="https://drive.google.com/uc?id=1WX-UshxhGO8R5nCk6HWIYVIGL398QHnP" title="Pdf">
-					<u>Thèses sur Feuerbach</i>(.pdf)</u></a><span></p></u></a></i></span>
+					<u>Thèses sur Feuerbach</i>(.pdf)</p></u></a></i></span>
 				<p><span>PANNEKOEK, Anton
 					<br><a href="https://drive.google.com/uc?id=1fiYMiYO4qmG7oaMvZ3LONZkzypq9X9ve" title="Pdf">
 					<i><u>Lettre à Socialisme ou Barbarie(.pdf)</i></u></a><span></p>
