--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -214,9 +214,9 @@
 									
 	                    <td width="300" id="Manifestes">
 				<p><span><h3><br>Manifestes</h2><span></p>
-				<p><span>BRETON, André,
+				<p><span>BRETON, André<br>
 					<a href="https://drive.google.com/uc?id=1sqoAHbPdg4l3FDcHUInHinXFgmg5PY9u" title="Manifeste du surréalismePdf">
-					<i>Manifeste du surréalisme</i> (1918)</u></span></p></a>
+					<u><i>Manifeste du surréalisme</i> (1918)</u></span></p></a>
 				<p><span>MARINETTI, Filippo Tommaso
 					<a href="https://drive.google.com/uc?id=16ZqvcWQT-fLCnTjSWs0mRCiTxVesPTc_" title="futurismePdf">
 					<br><u><i> Manifeste du futurisme</i></u></span></p></a>
