--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -83,9 +83,9 @@
 		<tr>
 	                    <td width="300" id="textes">
 				<p><span><h3><br>Textes</h3><span></p>
-					<p><span>ADORNO, Theodor W.
+					<p><span>ADORNO, Theodor W.<br>
 					<a href="https://drive.google.com/uc?id=1rscIEmUxDGo96a8UWlm--bn9tfIsFWJl" title="Pdf">
-					<p><span><u><i>L’industrie culturelle</i> (conférence de 1962)(.pdf)</u></i></a><span></p>
+					<u><i>L’industrie culturelle</i> (conférence de 1962)(.pdf)</u></i></a><span></p>
 				<p><span>ANONYME, révolté de la colonne de fer
 					<br><i><a href="https://drive.google.com/uc?id=1j-9yHGbOKhoSxWFRQaBuO14JX7TpVnEB" title="Pdf">
 					<u>Protestation devant les libertaires du présent et du&#8239;futur&#8239;sur&#8239;les&#8239;capitulations&#8239;de&#8239;1937(.pdf)</i></u></a></span></p>
