--- a/plagiat_ed_index.html
+++ b/plagiat_ed_index.html
@@ -105,7 +105,7 @@ et les nouvelles formes d’action dans la politique ou l’art, Sur le passage 
 					    PANNEKOEK, Anton, <i>Lettre à Socialisme ou Barbarie</i> (socle théorique).<br><br>
 					    SANGUINETTI, Gianfranco (Censor), <i>Véridique Rapport sur les dernières chances de sauver le capitalisme en Italie</i> (socle théorique).<br><br>
 					    TZARA, Tristan, <i>Manifeste dada</i> (1918) (corpus- Modernité artistique).<br><br>
-					    VANEGEIM, Raoul, <i>Sur la Commune</i> (socle théorique), <i>Banalités de base</i> (corpus- Modernité artistique).<br><br>
+					    VANEIGEM, Raoul, <i>Sur la Commune</i> (socle théorique), <i>Banalités de base</i> (corpus- Modernité artistique).<br><br>
 					    VELOCE, (présents sur Plagiat mais non publiés), <i>La civilisation du jeu, Ci-gît la critique, Réponse à Frédéric Lordon, Après l'orage</i> (socle théorique), <i>Thèses sur la poésie</i> (corpus- Modernité artistique).<span></p>         
 	
 				    
