--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -143,7 +143,7 @@
 				<p><span>SANGUINETTI, Gianfranco (Censor)
 					<br><i><a href="https://drive.google.com/uc?id=1CTBmJjkAg0knpUVijwwwdNr-G14y-fpu" title="Pdf">
 					<u>Véridique Rapport sur les dernières chances de sauver le capitalisme en Italie(.pdf)</u></a></i></span></p>
-				<p><span>VANEGEIM, Raoul
+				<p><span>VANEIGEM, Raoul
 					<br><i><a href="https://drive.google.com/uc?id=1-l4FIntu8dwtqf70ju-2NOxtjNClk3cv" title="communePdf">
 					<u>Sur la commune,<br>(et gravure de la commune) (.pdf)</i></u><span></p></a>
 				<p><span>VELOCE 
