--- a/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
+++ b/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
@@ -4,7 +4,7 @@
 <title>Plagiat Edition boutique</title>  
 <link rel="icon" type="image/png" href="https://drive.google.com/uc?id=11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
 <meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité. Boutique : Ne pas mourir comme des chiens, de Mamoste dîn " />
-<link rel="stylesheet" href="plagiat_ed_boutique.css" />
+<link rel="stylesheet" href="plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.css" />
 </head>
 <body>
 
