--- a/plagiat_ed_histoire_VR_chap_2.html
+++ b/plagiat_ed_histoire_VR_chap_2.html
@@ -4,7 +4,7 @@
 <title>Editions Plagiat socle théorique/veridique-rapport</title>  
 <link rel="icon" type="image/png" href="https://drive.google.com/uc?id=11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
 <meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité." />
-<link rel="stylesheet" href="plagiat_ed_histoire_.css" />
+<link rel="stylesheet" href="plagiat_ed_histoire_VR.css" />
 </head>
 <body>
 
