--- a/plagiat_ed_BD.html
+++ b/plagiat_ed_BD.html
@@ -117,6 +117,15 @@
 </div>
 
 
+  <div class="col-3 col-s-12">
+    <div class="aside">
+
+      <a id="affiche" rel="catalogue/bandesdessinees">
+				<img src="image_site/affichechiens.jpg" alt="affichesnousnavonsrienanousqueletemps" width="300 " height="auto" />
+			</a>
+    </div>
+  </div>
+</div>
 
 </body>
 		 </html>
