--- a/plagiat_ed_BD_le_présischtroumpf_détournement.html
+++ b/plagiat_ed_BD_le_présischtroumpf_détournement.html
@@ -71,14 +71,13 @@
 	
 	<br>
 	  <br><cite id="resume"><span>
-Le Schtroumpfissime
-Détournement
+Le Présischtroumpf - détournement :
 
-Au village des Schtroumpfs,
-	  l’élection d’un nouveau Schtroumpfissime n’a visiblement pas atténué la colère. 
+"Au village des Schtroumpfs,
+	  l’élection d’un nouveau présischtroumpf n’a visiblement pas atténué la colère. 
 	  Au grand dam du nouveau maître de maison, 
 	  dont la bouille sympathique n’a pas tardé à laisser place au mépris et à l’autoritarisme. 
-	  Il se pourrait bien que cette mascarade électorale soit la dernière…</cite><span>
+	  Il se pourrait bien que cette mascarade électorale soit la dernière…"</cite><span>
             <br>
 	<br>
 		 <a id="partieune">
@@ -97,58 +96,47 @@ Au village des Schtroumpfs,
 				<img src="https://drive.google.com/uc?id=1OJ01vo-Yz6IjLEjTp-DQO6VZLisELSyo" alt="Le présischtroumpf" width="850" height="auto" />
 			</a> 
          <a id="partie6">
-				<img src="" alt="Le présischtroumpf" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1OJ01vo-Yz6IjLEjTp-DQO6VZLisELSyo" alt="Le présischtroumpf" width="850" height="auto" />
 			</a>
          <a id="partie7">
-				<img src="https://drive.google.com/uc?id=1T6upQkvFKwra8D90GDWHdMmN1C3QiOYk" alt="Le présischtroumpf" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=17oE85eTo_qAJeNyNKHNjMGutPAmXQsBQ" alt="Le présischtroumpf" width="850" height="auto" />
 			</a>
          <a id="partie8">
-				<img src="https://drive.google.com/uc?id=1jCz-v7U7YC-6JV2S1_V6QBUdy_8JzHvw" alt="Le présischtroumpf" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=17oE85eTo_qAJeNyNKHNjMGutPAmXQsBQ" alt="Le présischtroumpf" width="850" height="auto" />
 			</a>
           <a id="partie9">
-				<img src="https://drive.google.com/uc?id=1-QBlmItr22IIrmhf66ermp51Ri0cyuzK" alt="Le présischtroumpf" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1AK6NiGOV7O4gWGAifzUBBckDBPMqJgtp" alt="Le présischtroumpf" width="850" height="auto" />
 			</a> 
          <a id="partie10">
-				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page10.jpg" alt="Le présischtroumpf" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1v-VlPdIW3Ct95rDepcKdMAWIy5zqC32f" alt="Le présischtroumpf" width="850" height="auto" />
 			</a>
          <a id="partie11">
-				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page11.jpg" alt="Le présischtroumpf" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1NBa0kR8_uQtRdDVfvZzJa-d9_pTWCddz" alt="Le présischtroumpf" width="850" height="auto" />
 			</a>
          <a id="partie12">
-				<img src="https://drive.google.com/uc?id=1WXFWxsoMCyc6p1yRa8y02o-o_gzcgoOu" alt="Le présischtroumpf" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1yFzASe-uh3Jfrfo4n2eIhy8dLxPmVpgz" alt="Le présischtroumpf" width="850" height="auto" />
 				
          <a id="partieune">
-				<img src="https://drive.google.com/uc?id=1uc1K3OtosbSFQkQ9z4Wsr5g_XeU0bl5g" alt="Le présischtroumpf" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1uWi_iHdXz85FqnHuvv3AVZtf10joCTb3" alt="Le présischtroumpf" width="850" height="auto" />
 			</a> 
          <a id="partie2">
-				<img src="https://drive.google.com/uc?id=1erHku2YHgOhbZH5jaDax8PHewt15lMGZ" alt="Le présischtroumpf" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1rYYR3Ewdn0xjmrminW7YG5gmzkq7jNBY" alt="Le présischtroumpf" width="850" height="auto" />
 			</a>
          <a id="partie3">
-				<img src="https://drive.google.com/uc?id=1g6QhXr2Pt_DdsyAw-6XHYMKMHqVn0ALb" alt="Le présischtroumpf" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1tbNL-n-j5j57l-XvybI3PsxvmucTLINo" alt="Le présischtroumpf" width="850" height="auto" />
 			</a>
          <a id="partie4">
-				<img src="https://drive.google.com/uc?id=1uFh-FUB-BRdXAjiPa5nqH6D76iBbaVkn" alt="NLe présischtroumpf" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1fm9Ki94VXaZSgoRwEgTnuS-I9a4CzLnp" alt="NLe présischtroumpf" width="850" height="auto" />
 			</a>	
           <a id="partie5">
-				<img src="https://drive.google.com/uc?id=1rWEI9zaiAIZM2Dzf9fkDP-Kkx4Le7Z9u" alt="Le présischtroumpf" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1f9NCEfWrUaVmx51p7VNhTO1EWgu0nDl_" alt="Le présischtroumpf" width="850" height="auto" />
 			</a> 
          <a id="partie6">
-				<img src="https://drive.google.com/uc?id=1Pf4kJ90VDr74uC-ydsMjfCgbJ38ZaJRd" alt="Le présischtroumpf" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1jVCvqvjHi04oe91spRSxZOKB_0P1oIPB" alt="Le présischtroumpf" width="850" height="auto" />
 			</a>
          <a id="partie7">
-				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page19.jpg" alt="Le présischtroumpf" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1OTsN0rt1RUHyfTR-V_X75VA5cIC6vZoB" alt="Le présischtroumpf" width="850" height="auto" />
 			</a>
-         <a id="partie8">
-				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page20.jpg" alt="Le présischtroumpf" width="850" height="auto" />
-			</a>
-          <a id="partie9">
-				<img src="https://drive.google.com/uc?id=1uAoOYN0E6DaxwLg0OxIm4Z-WHopXXi_X" alt="Le présischtroumpf" width="850" height="auto" />
-			</a> 
-         <a id="partie10">
-				<img src="https://drive.google.com/uc?id=1v6RGUmpLpupbXt-lpNLYbzuDnAhqn0-O" alt="Le présischtroumpf" width="850" height="auto" />
-			</a>
-   
-         
 
 
 </div>
