--- a/plagiat_ed_BD_ne_pas_mourir_comme_des_chiens.html
+++ b/plagiat_ed_BD_ne_pas_mourir_comme_des_chiens.html
@@ -68,8 +68,11 @@
 
   <div class="col-6 col-s-9">
 	
-	
-	<br>
+	<br><h3>Attention, nous vous conseillons de privilégier la lecture sur pdf. Car bien qu'ils soient lourds, ceux-ci ne buggent pas, 
+				contrairement aux images qui peuvent ne pas bien se charger sur le site.
+				. 
+			<br>Seule la commande de livres imprimés est payante (Boutique).<span></h3>
+	  
 	  <br><cite id="resume"><span>Les luttes se croisent et se ressemblent, comme celles des
 Kurdes et des gilets jaunes. Le même combat pour la liberté
 et l'égalité sociale rencontre la même répression.
