--- a/plagiat_ed_index.html
+++ b/plagiat_ed_index.html
@@ -93,6 +93,7 @@
 				<i>Rapport sur la construction des situations, Préliminaires pour une définition de l’unité du programme révolutionnaire, Pour un jugement révolutionnaire de l’art, Les Situationnistes
 et les nouvelles formes d’action dans la politique ou l’art, Sur le passage de quelques personnes à travers une assez courte unité de temps, Critique de la séparation</i> - transcription, <i> </i>, (corpus- Modernité artistique).<br><br>
 					    DÎN, Mamoste, <i>Ne pas mourir comme des chiens</i> (bande dessinée), illustrations de <i>Protestation devant les libertaires du présent et du futur sur les capitulations de 1937</i> (Socle théorique), et graphisme du site.<br><br>
+					    G.R.C. (Groupe Révolutionnaire Charlatan), <i>Le présischtroumpf&#8239;-&#8239;détournement</i> (bande dessinée).<br><br>
 					    I.S., n°3, <i>Le sens du dépérissement de l’art</i>, n° 7, <i>Les mauvais jours finiront</i>, n° 7, <i>Du rôle de l’I.S.</i>, n° 7, <i>Communication prioritaire</i>, n° 7, <i>Sunset Boulevard</i>, 
 				n°8, <i>Domination de la nature, idéologies et classes</i>, n°8, <i>L’avant-garde de la présence</i>, n°8, <i> All the king’s men</i>, n°9, <i>Maintenant l’I.S.</i>, n°10, <i>Les mots captifs</i>,
 				(corpus- Modernité artistique).<br><br>
