--- a/plagiat_ed_virement.html
+++ b/plagiat_ed_virement.html
@@ -4,7 +4,7 @@
 <title>Editions Plagiat boutique/virement</title>  
 <link rel="icon" type="image/png" href="https://drive.google.com/uc?id=11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
 <meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité. Boutique : BD romans graphiques et livres" />
-<link rel="stylesheet" href="plagiat_ed_boutique.css" />
+<link rel="stylesheet" href="plagiat_ed_virement.css" />
 </head>
 <body>
 
