--- a/plagiat_ed_corpus.html
+++ b/plagiat_ed_corpus.html
@@ -14,7 +14,7 @@
             <tr>
 	                <td width="210" height="175" id="logo">
 			         <a id="logoHome" rel="start home" href="index.html">
-				    <img src="https://drive.google.com/uc?id=12csgnz9UYRP9CzWY4R_uXR5coniG5K3h" alt="Plagiat Editions"  />
+				    <img src="image_site/plagiat_editions.jpg" alt="Plagiat Editions"  />
 			</a>   
 			        </td>
 				
@@ -83,7 +83,7 @@
 			    <tr>
 	                <td width="200" id="illu1937"><br>
 			                <a id="legende" rel="article" href="plagiat_ed_corpus_modernité_artistique.html">
-			                <img src="https://drive.google.com/uc?id=16K8yBaFBkVpekv-uxEle4bXjXebDRSxn" alt="Exposition-martini-1787" width="200" height="auto" /></a>
+			                <img src="image_site/Salon_du_Louvre_1787.jpg" alt="Exposition-martini-1787" width="200" height="auto" /></a>
 			            </td>
 	                    <td width="325" id="Art et modernité">
 						<p><span><i><br>Modernité artistique, culture et histoire dans la théorie situationniste</i><br>Les Editions Plagiat, 2022<span></p>
