--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -164,6 +164,9 @@
 					<p><span>APPEL, Kerry<br>
 					<a id="marcos97" rel="marcos" href="https://www.youtube.com/watch?v=O3pHmHbqqTk">
 					<u><i>Interview Marcos 1997</i></u></span></p></a>
+					<p><span>CONNER, Bruce<br>
+					<a id="A movie" rel="A movies" href="https://vimeo.com/96777553">
+					<u><i>A movie</i></u></span></p></a>
 				<p><span>DEBORD, Guy,
 					<bR><u><i><a id="critiqueseparation" rel="separation" href="https://www.youtube.com/watch?v=bDkLPyHp0Q0">
 					Critique de la séparation</a>
@@ -184,22 +187,22 @@
 					<u><i>Debord et la philosophie allemande</i></u></span></p></a>
 				<p><span>LEAL, Luís Henrique et ZATTi, Caio<br>
 				<a id="fotograma" rel="imageillu" href="https://vimeo.com/146580693">
-					<u><i>Fotograma</i></u>
+					<u><i>Fotograma</i></u></p>
 				<p><span>MARKER, Chris Caio<br>
 				<a id="Chatsperchés" rel="Chatsperchés" href="https://www.youtube.com/watch?v=7fJbO8wOc84>
-					<u><i>Chats perchési</i></u>
+					<u><i>Chats perchési</i></u><br>
 				<a id="Cuba si" rel="Cuba si" href="https://www.youtube.com/watch?v=gNdsK5WEh_M">
-					<u><i>Cuba si</i></u>
+					<u><i>Cuba si</i></u><br>
 				<a id="La Jetée" rel="La Jetée" href="https://www.youtube.com/watch?v=fU99W-ZrIHQ">
-					<u><i>La Jetée</i></u>
+					<u><i>La Jetée</i></u><br>
 				<a id="Le joli mai" rel="Le joli mai" href="https://www.youtube.com/watch?v=aRPXsnSmnvc">
-					<u><i>Le joli mai</i></u>
+					<u><i>Le joli mai</i></u><br>
 				<a id="LES STATUES MEURENT" rel="Les statues meurent aussi" href="https://www.youtube.com/watch?v=F0y1ZTrql8U">
-					<u><i>Les statues meurent aussi</i></u>
+					<u><i>Les statues meurent aussi</i></u><br>
 				<a id=" "Puisqu'on vous dit que c'est possible"" rel=" "Puisqu'on vous dit que c'est possible"" href="https://www.youtube.com/watch?v=c6-bn8tDrF0">
-					<u><i> "Puisqu'on vous dit que c'est possible"</i></u
+					<u><i> "Puisqu'on vous dit que c'est possible"</i></u><br>
 				<a id="Une Journée d'Andrei Arsenevitch Tarkovski" rel="Une Journée d'Andrei Arsenevitch Tarkovski" href="https://www.youtube.com/watch?v=8FoVj2IbMLs">
-					<u><i>Une Journée d'Andrei Arsenevitch Tarkovski</i></u>
+					<u><i>Une Journée d'Andrei Arsenevitch Tarkovski</i></u></p>
 				<p><span>MREJEN, Valérie, 
 					<br><a id="Manufrance" rel="Manufrance" href="https://vimeo.com/34555891">
 					<u><i>Manufrance</i></u></span></p></a>
