--- a/plagiat_ed_liens.html
+++ b/plagiat_ed_liens.html
@@ -14,7 +14,7 @@
             <tr>
 	                <td width="210" height="175" id="logo">
 			         <a id="logoHome" rel="start home" href="index.html">
-				    <img src="https://drive.google.com/uc?id=12csgnz9UYRP9CzWY4R_uXR5coniG5K3h" alt="Plagiat Editions"  />
+				    <img src="image_site/plagiat_editions.jpg" alt="Plagiat Editions"  />
 			</a>   
 			        </td>
 				
