--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -72,8 +72,8 @@
 	
 	<br>
 	<br>
-			<caption><span><h3>Archives de toutes les productions pertinentes que l'on a pu trouver sur internet accessibles gratuitement.
-				</h3><br> (Titres par auteur.)<br>(cliquer sur les titres pour acceder aux contenus.)<span></caption>    
+			<caption><span><h4>Archives de toutes les productions pertinentes que l'on a pu trouver sur internet accessibles gratuitement.
+				</h4><br> (Titres par auteur.)<br>(cliquer sur les titres pour acceder aux contenus.)<span></caption>    
 	         
             <br>
 			
@@ -187,8 +187,8 @@
 					<u><i>Debord et la philosophie allemande</i></u></span></p></a>
 				<p><span>LEAL, Luís Henrique et ZATTi, Caio<br>
 				<a id="fotograma" rel="imageillu" href="https://vimeo.com/146580693">
-					<u><i>Fotograma</i></u></p>
-				<p><span>MARKER, Chris Caio<br>
+					<u><i>Fotograma</i></u></p></a>
+				<p><span>MARKER, Chris<br>
 				<a id="Chatsperchés" rel="Chatsperchés" href="https://www.youtube.com/watch?v=7fJbO8wOc84>
 					<u><i>Chats perchési</i></u><br>
 				<a id="Cuba si" rel="Cuba si" href="https://www.youtube.com/watch?v=gNdsK5WEh_M">
